git忽略生成的html文件

--- a/hello.html
+++ b/hello.html
@@ -5,7 +5,12 @@
 <p><code># Group 门店管理</code>=&gt;页面级别</p>
 </li>
 <li>
-<p><code>## 商户-门店列表查询 [GET /store/app/search]</code>=&gt;单个接口级别; <code>商户-门店列查询</code>=&gt;接口名称; <code>GET/POST</code>=&gt;接口方法; <code>/store/app/search</code>=&gt;接口地址</p>
+<p><code>## 商户-门店列表查询 [GET /store/app/search]</code>=&gt;单个接口级别;</p>
+<ul>
+<li><code>商户-门店列查询</code>=&gt;接口名称;</li>
+<li><code>GET/POST</code>=&gt;接口方法;</li>
+<li><code>/store/app/search</code>=&gt;接口地址</li>
+</ul>
 </li>
 <li>
 <p><code>&gt; 根据页面查询条件获取门店列表</code>=&gt;接口说明;</p>
